Added a sqlite database

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -6,3 +6,9 @@
   body {
     background-color: #f9fafb;
   }
+
+  .warning {
+    color: lightcoral;
+    font-weight: bold;
+    visibility: hidden;
+}
