--- a/client/src/styles-global.css
+++ b/client/src/styles-global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 * {
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
@@ -9,10 +11,9 @@
     background-color: #f9fafb;
   }
 
-  .warning {
-    color: lightcoral;
-    font-weight: bold;
-    visibility: hidden;
+.warning {
+  color: lightcoral;
+  font-weight: bold;
 }
 
 /* REQUEST TABLES STYLING */
