--- a/client/src/styles-global.css
+++ b/client/src/styles-global.css
@@ -111,7 +111,7 @@ nav a {
   border: 2px black solid;
   border-radius: 5px;
   padding: 10px;
-  width: 90%;
+  width: 100%;
   text-align: center;
 }
 
@@ -130,6 +130,23 @@ nav a {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  font-size: 18px;
+}
+
+.grid h2 {
+  margin-bottom: 10px;
+  padding-bottom: 5px;
+  border-bottom: 2px black solid;
+}
+
+.grid button {
+  cursor: pointer;
+  background-color: #3498db;
+  border: 2px solid #3498db;
+  border-radius: 4px;
+  color: #fff;
+  font-size: 16px;
+  width: 100%;
 }
 
 /* DETAILS STYLING */
@@ -139,7 +156,7 @@ nav a {
   border: 2px black solid;
   border-radius: 5px;
   padding: 10px;
-  width: 90%;
+  width: 100%;
   text-align: center;
 }
 
@@ -174,18 +191,18 @@ nav a {
   position: relative;
 }
 
-.form .form-control label, legend {
+.form .form-control label, .form .form-control legend {
   color: #777;
   display: block;
   margin-bottom: 5px;
 }
 
-.form .form-control input, textarea, fieldset, select {
+.form .form-control input, .form .form-control textarea, .form .form-control fieldset, .form .form-control select {
   border: 2px solid #f0f0f0;
   border-radius: 4px;
 }
 
-.form .form-control input, textarea, select {
+.form .form-control input, .form .form-control textarea, .form .form-control select {
   display: block;
   width: 100%;
   padding: 10px;
