--- a/client/src/styles-global.css
+++ b/client/src/styles-global.css
@@ -112,7 +112,7 @@ nav ul li:last-child {
   border: 2px black solid;
   border-radius: var(--border-radius);
   padding: 10px;
-  width: 100%;
+  width: 1000px;
   text-align: center;
 }
 
@@ -129,9 +129,7 @@ nav ul li:last-child {
 
 .grid p {
   white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .grid h2 {
